Translate message property for show process data in the task list of user

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/details.xhtml
@@ -131,7 +131,7 @@
             </div>
             <div>
                 <!-- show process data in my tasks -->
-                <p:outputLabel for="show-process-data" value="#{msgs.spalteVorgangsdatumInEigenenAufgabenAnzeigen}" />
+                <p:outputLabel for="show-process-data" value="#{msgs.showProcessInTaskList}" />
                 <p:selectBooleanCheckbox id="show-process-data" styleClass="input" onchange="toggleSave()"
                                          disabled="#{isViewMode}" value="#{UserForm.userObject.configProductionDateShow}"/>
             </div>
