--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
@@ -49,16 +49,16 @@
                         <h:outputText value="#{msgs.later}"/>
 
                         <!-- If blocked by yourself: you can unblocked -->
-                        <h:commandLink id="action1"
+                        <h:commandLink id="releaseLock"
                                        rendered="#{(process.blockedUser != null) and (process.blockedUser.id == LoginForm.myBenutzer.id)}"
-                                       action="#{CurrentTaskForm.sperrungAufheben}"
+                                       action="#{CurrentTaskForm.releaseLock}"
                                        title="#{msgs.oderSperrungAufheben}">
                             <h:outputText><i class="fa fa-lock"/> #{msgs.oderSperrungAufheben}</h:outputText>
                         </h:commandLink>
                     </h:panelGroup>
 
                     <!-- Script-button -->
-                    <h:commandLink id="action3"
+                    <h:commandLink id="executeScrip"
                                    rendered="#{task.scriptPath != null and task.scriptPath != '' and task.process.blockedUser == null}"
                                    action="#{CurrentTaskForm.executeScript}" title="#{task.scriptName}">
                         <f:setPropertyActionListener target="#{CurrentTaskForm.scriptPath}" value="#{task.scriptPath}"/>
@@ -66,7 +66,7 @@
                     </h:commandLink>
 
                     <!-- tiffHeaderDownload-button -->
-                    <h:commandLink id="action8" rendered="#{0==1 and process.blockedUser == null}"
+                    <h:commandLink id="downloadTiffHeader" rendered="#{0==1 and process.blockedUser == null}"
                                    action="#{CurrentTaskForm.downloadTiffHeader}" title="#{msgs.saveTifHeaderFile}">
                         <h:outputText><i class="fa fa-file-o"/> #{msgs.saveTifHeaderFile}</h:outputText>
                     </h:commandLink>
@@ -118,8 +118,7 @@
                     </h:commandLink>
 
                     <!-- Edit Cancel-buttons -->
-                    <p:commandLink id="cancel" action="#{CurrentTaskForm.schrittDurchBenutzerZurueckgeben}"
-                                   title="#{msgs.releaseTask}">
+                    <p:commandLink id="cancel" action="#{CurrentTaskForm.releaseTask}" title="#{msgs.releaseTask}">
                         <h:outputText><i class="fa fa-ban"/> #{msgs.releaseTask}</h:outputText>
                         <p:confirm header="#{msgs.confirmRelease}" message="#{msgs.reallyReleaseTask}}"
                                    icon="ui-icon-alert"/>
@@ -190,8 +189,7 @@
                     </h:panelGroup>
 
                     <!-- Lock button -->
-                    <p:commandLink id="close" action="#{CurrentTaskForm.schrittDurchBenutzerAbschliessen}"
-                                   title="#{msgs.closeTask}">
+                    <p:commandLink id="close" action="#{CurrentTaskForm.closeTaskByUser}" title="#{msgs.closeTask}">
                         <h:graphicImage value="/pages/images/buttons/ok.gif" alt="ok"
                                         style="margin-right:3px;vertical-align:middle"/>
                         <h:outputText value="#{msgs.closeTask}"/>
