--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/batchProperties/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/batchProperties/processList.xhtml
@@ -19,7 +19,7 @@
 
     <ui:fragment rendered="#{BatchForm.batchHelper != null}">
         <p:dataTable id="processesTable" var="process" value="#{BatchForm.batchHelper.processes}"
-                     lazy="true" paginator="true" rows="#{LoginForm.myBenutzer.tableSize}"
+                     lazy="true" paginator="true" rows="#{LoginForm.loggedUser.tableSize}"
                      paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                      paginatorPosition="bottom">
             <p:column id="titleColumn" headerText="#{msgs.processes}" filterBy="#{process.title}">
