--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/hitlistPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/hitlistPopup.xhtml
@@ -26,7 +26,7 @@
             <p:dataTable id="hitlistTable"
                          value="#{ProzesskopieForm.hitlist}"
                          var="hit"
-                         rows="#{LoginForm.myBenutzer.tableSize}"
+                         rows="#{LoginForm.loggedUser.tableSize}"
                          paginator="true">
                 <p:column headerText="#{msgs.hits}">
                     <p:commandLink value="#{hit.bibliographicCitation}"
