--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
@@ -148,7 +148,7 @@
                     <tr>
                         <td>
                             <h:form id="addToWikiForm"
-                                    rendered="#{CurrentTaskForm.batchHelper.currentStep.processingUser.id == LoginForm.myBenutzer.id}">
+                                    rendered="#{CurrentTaskForm.batchHelper.currentStep.processingUser.id == LoginForm.loggedUser.id}">
                                 <h:panelGrid>
                                     <h:panelGroup>
                                         <h:inputText id="addToTextArea"
