--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/tasksWidget.xhtml
@@ -44,14 +44,14 @@
                 </h:commandLink>
                 <!-- already assigned task (this user) -->
                 <h:link outcome="/pages/currentTasksEdit"
-                        rendered="#{(task.processingStatus == 'INWORK' and task.processingUser.id == LoginForm.myBenutzer.id and !task.batchStep) || (task.processingStatus == 'INWORK' and task.processingUser.id == LoginForm.myBenutzer.id and task.batchStep and !task.batchAvailable)}"
+                        rendered="#{(task.processingStatus == 'INWORK' and task.processingUser.id == LoginForm.loggedUser.id and !task.batchStep) || (task.processingStatus == 'INWORK' and task.processingUser.id == LoginForm.loggedUser.id and task.batchStep and !task.batchAvailable)}"
                         title="#{msgs.inBearbeitungDurch}: #{task.processingUser!=null and task.processingUser.id!=0 ? task.processingUser.fullName:''}">
                     <h:outputText><i class="fa fa-bell"/></h:outputText>
                     <f:param name="id" value="#{task.id}"/>
                 </h:link>
                 <!-- already assigned task (different user) -->
                 <h:commandLink action="#{CurrentTaskForm.editTask}" id="view2"
-                               rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id != LoginForm.myBenutzer.id and (!task.batchStep || !task.batchAvailable)}"
+                               rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id != LoginForm.loggedUser.id and (!task.batchStep || !task.batchAvailable)}"
                                title="#{msgs.inBearbeitungDurch}: #{(task.processingUser!=null and task.processingUser.id!=0 ? task.processingUser.fullName : '')}">
                     <h:outputText><i class="fa fa-bell-slash"/></h:outputText>
                     <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
@@ -67,7 +67,7 @@
 
                 <!-- edit batch step (this user) -->
                 <h:commandLink id="batchInWork" action="#{CurrentTaskForm.editBatchTasks}"
-                               rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id == LoginForm.myBenutzer.id and task.batchStep and task.batchAvailable}"
+                               rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id == LoginForm.loggedUser.id and task.batchStep and task.batchAvailable}"
                                title="#{msgs.bearbeitungDiesesSchrittsUebernehmen}">
                     <h:graphicImage value="/pages/images/buttons/admin3.gif" alt="edit"/>
                     <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
@@ -75,7 +75,7 @@
 
                 <!-- edit batch step (different user) -->
                 <h:commandLink id="batchInWorkOther" action="#{CurrentTaskForm.editBatchTasks}"
-                               rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id != LoginForm.myBenutzer.id and task.batchStep and task.batchAvailable}"
+                               rendered="#{task.processingStatus == 'INWORK' and task.processingUser.id != LoginForm.loggedUser.id and task.batchStep and task.batchAvailable}"
                                title="#{msgs.inBearbeitungDurch}: #{(task.processingUser!=null and task.processingUser.id!=0 ? task.processingUser.fullName : '')}">
                     <h:graphicImage value="/pages/images/buttons/admin3c.gif" alt="edit"/>
                     <f:setPropertyActionListener value="#{task.id}" target="#{CurrentTaskForm.taskById}"/>
