--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -17,7 +17,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:p="http://primefaces.org/ui">
     <p:dataTable var="item" id="ldapGroupsTable" value="#{LdapGroupForm.ldapGroups}" lazy="true" paginator="true"
-                 rows="#{LoginForm.myBenutzer.tableSize}"
+                 rows="#{LoginForm.loggedUser.tableSize}"
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
         <p:column headerText="#{msgs.ldapGroup}">
