--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapserverList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapserverList.xhtml
@@ -19,7 +19,7 @@
                  value="#{LdapServerForm.ldapServers}"
                  lazy="true"
                  paginator="true"
-                 rows="#{LoginForm.myBenutzer.tableSize}"
+                 rows="#{LoginForm.loggedUser.tableSize}"
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
         <p:column headerText="#{msgs.ldapServer}">
