--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/currentTasksEdit/taskBoxActivities.xhtml
@@ -57,7 +57,7 @@
                     </h:panelGroup>
 
                     <!-- Script-button -->
-                    <h:commandLink id="executeScrip"
+                    <h:commandLink id="executeScript"
                                    rendered="#{task.scriptPath != null and task.scriptPath != '' and task.process.blockedUser == null}"
                                    action="#{CurrentTaskForm.executeScript}" title="#{task.scriptName}">
                         <f:setPropertyActionListener target="#{CurrentTaskForm.scriptPath}" value="#{task.scriptPath}"/>
