--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/resetPasswordPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/resetPasswordPopup.xhtml
@@ -16,23 +16,15 @@
         xmlns:p="http://primefaces.org/ui">
     <h:body>
         <!-- edit dialog -->
-        <p:dialog widgetVar="changePasswordDialog"
-                  id="changePasswordDialog"
-                  header="#{msgs.passwordChange}"
+        <p:dialog widgetVar="resetPasswordDialog"
+                  id="resetPasswordDialog"
+                  header="#{msgs.passwordReset}"
                   width="400px"
                   modal="true"
                   dynamic="true">
-            <h:form id="changePasswordForm">
+            <h:form id="resetPasswordForm">
                 <p:panelGrid id="passwordGrid" columns="1" layout="grid">
                     <p:row>
-                        <div>
-                            <!-- old password -->
-                            <h:outputLabel for="oldPassword" value="#{msgs.oldPassword}"/>
-                            <p:password redisplay="true" id="oldPassword" class="password"
-                                        value="#{UserForm.oldPassword}" label="#{msgs.oldPassword}"
-                                        required="true"/>
-                        </div>
-
                         <div>
                             <!-- new password -->
                             <h:outputLabel for="newPassword" value="#{msgs.newPassword}"/>
@@ -57,7 +49,7 @@
                                              iconPos="right"
                                              validateClient="true"
                                              styleClass="button-filled-blue"
-                                             oncomplete="PF('changePasswordDialog').hide();">
+                                             oncomplete="PF('resetPasswordDialog').hide();">
                             </p:commandButton>
                         </div>
                     </p:row>
